diesel_compile_tests/tests/ui/belongs_to_missing_foreign_key_field.stderr
error: No field with column name bar_id
 --> <macro expansion>:1:1
  |
1 | #[belongs_to(Bar)]
  | ^

error: No field with column name bar_id
 --> <macro expansion>:1:1
  |
1 | #[belongs_to(Bar, foreign_key = "bar_id")]
  | ^

error: No field with column name bar_id
 --> <macro expansion>:1:1
  |
1 | #[belongs_to(Bar)]
  | ^

error: No field with column name bar_id
 --> <macro expansion>:1:1
  |
1 | #[belongs_to(Bar, foreign_key = "bar_id")]
  | ^

error: aborting due to 4 previous errors

